Started Setting up XML Parseing

--- a/WindowsPhoneApp/ThemeParkData/ThemeParkData/ThemeParks.xaml
+++ b/WindowsPhoneApp/ThemeParkData/ThemeParkData/ThemeParks.xaml
@@ -22,13 +22,13 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PersonName" Text="" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="Theme Parks" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <TextBlock x:Name="txtblock_name" HorizontalAlignment="Left" Margin="70,53,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+            
         </Grid>
     </Grid>
 </phone:PhoneApplicationPage>
